# gsasl

./: .clcopying  .cvscopying  .cvsignore  .cvsusers  .gitignore  .gitmodules  .x-sc_bindtextdomain  .x-sc_cast_of_x_alloc_return_value  .x-sc_file_system  .x-sc_po_check  .x-sc_program_name  .x-sc_prohibit_atoi_atof  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_getopt_without_use  .x-sc_prohibit_magic_number_exit  .x-sc_space_tab  .x-sc_the_the  .x-sc_trailing_blank  ANNOUNCE  AUTHORS  ChangeLog  GNUmakefile  Makefile.am  Makefile.cfg  NEWS  README  README-alpha  THANKS  autogen.sh  cfg.mk  configure.ac  gsasl.fms  gsasl.pc.in  libgsasl.pc.in  maint-cfg.mk  maint.mk
doc/: .cvsignore  ANNOUNCE  Makefile.am  Makefile.gdoci  abstraction.dia  abstraction.eps  announce.txt  controlflow.dia  controlflow.eps  controlflow2.dia  controlflow2.eps  gdoc  gdoc-error  gendocs.sh  gendocs_template  gpl.texi  gsasl-callback-authentication.texi  gsasl-callback-authorization.texi  gsasl-callback-client-service.texi  gsasl-callback-cram-md5.texi  gsasl-callback-digest-md5.texi  gsasl-callback-gssapi.texi  gsasl-callback-passcode.texi  gsasl-callback-password.texi  gsasl-callback-retrieve.texi  gsasl-callback-securid.texi  gsasl-callback-server-service.texi  gsasl-callback-validate.texi  gsasl-example1.c  gsasl.texi  lgpl.texi  print-errors.c
doc/cyclo/: Makefile.am
doc/doxygen/: Doxyfile.in  gdoc2doxygen
doc/man/: .cvsignore  Makefile.am
doc/reference/: .cvsignore  Makefile.am  gsasl-docs.sgml  gsasl-docs.tmpl
doc/specification/: draft-altman-tls-channel-bindings-01.txt  draft-burdis-cat-srp-sasl-04.txt  draft-burdis-cat-srp-sasl-07.txt  draft-ietf-nntpext-authinfo-06.txt  draft-ietf-sasl-anon-04.txt  draft-ietf-sasl-anon-05.txt  draft-ietf-sasl-crammd5-02.txt  draft-ietf-sasl-crammd5-03.txt  draft-ietf-sasl-crammd5-04.txt  draft-ietf-sasl-crammd5-05.txt  draft-ietf-sasl-crammd5-06.txt  draft-ietf-sasl-crammd5-07.txt  draft-ietf-sasl-crammd5-08.txt  draft-ietf-sasl-crammd5-09.txt  draft-ietf-sasl-gs2-01.txt  draft-ietf-sasl-gs2-02.txt  draft-ietf-sasl-gs2-05.txt  draft-ietf-sasl-gssapi-01.txt  draft-ietf-sasl-gssapi-02.txt  draft-ietf-sasl-gssapi-03.txt  draft-ietf-sasl-gssapi-04.txt  draft-ietf-sasl-gssapi-05.txt  draft-ietf-sasl-gssapi-06.txt  draft-ietf-sasl-gssapi-07.txt  draft-ietf-sasl-gssapi-08.txt  draft-ietf-sasl-plain-04.txt  draft-ietf-sasl-plain-05.txt  draft-ietf-sasl-plain-06.txt  draft-ietf-sasl-plain-07.txt  draft-ietf-sasl-plain-08.txt  draft-ietf-sasl-plain-09.txt  draft-ietf-sasl-rfc2222bis-04.txt  draft-ietf-sasl-rfc2222bis-05.txt  draft-ietf-sasl-rfc2222bis-06.txt  draft-ietf-sasl-rfc2222bis-07.txt  draft-ietf-sasl-rfc2222bis-08.txt  draft-ietf-sasl-rfc2222bis-09.txt  draft-ietf-sasl-rfc2222bis-10.txt  draft-ietf-sasl-rfc2222bis-11.txt  draft-ietf-sasl-rfc2222bis-13.txt  (+73 more)
examples/: .cvsignore  Makefile.am  README  client-callback.c  client-mech.c  client-serverfirst.c  client-xmpp-saml20.c  client.c  server-xmpp-saml20.c  smtp-server.c
examples/openid20/: Makefile.am  README  gsasl-openid20-redirect.php  gsasl-openid20-rp.php  smtp-server-openid20.c
examples/saml20/: Makefile.am  README  gsasl-saml20-request.c  gsasl-saml20-sp.php  smtp-server-saml20.c  sp-crt.pem  sp-key.pem  sp-metadata.xml
gl/: .cvsignore  Makefile.am  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-fs-xinl.c  argp-help.c  argp-namefrob.h  argp-parse.c  argp-pv.c  argp-pvh.c  argp-xinl.c  argp.h  arpa_inet.in.h  c-strcase.h  c-strcasecmp.c  c-strncasecmp.c  dummy.c  errno.in.h  fseeko.c  gai_strerror.c  getaddrinfo.c  getaddrinfo.h  getdelim.c  getopt.c  getopt1.c  getpass.c  getpass.h  getpassword.c  getpassword.h  gettext.h  iconv.c  iconv.in.h  iconv_close.c  iconv_open.c  iconvme.c  iconvme.h  localcharset.c  localcharset.h  (+31 more)
gl/m4/: Makefile.am  argp.m4  close.m4  getaddrinfo.m4  getline.m4  getopt.m4  gnulib-cache.m4  gnulib-comp.m4  gnulib.m4  mempcpy.m4  open.m4  readline.m4  socklen.m4  stdio_h.m4  strdup.m4  visibility.m4
gl/tests/: Makefile.am
lib/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README-alpha  README.win32  THANKS  anonymous.c  anonymous.h  autogen.sh  base64.c  callback-c.c  callback-s.c  callback.c  cfg.mk  common.c  configure.ac  cram-md5.c  cram-md5.h  crypto.h  digest-md5.c  digest-md5.h  done.c  error.c  external.c  external.h  gsasl.h.in  gssapi.c  gunibreak.h  gunicomp.h  gunidecomp.h  hexdump.c  init.c  internal.h  kerberos_v5.c  kerberos_v5.h  libgcrypt.c  libgsasl.pc.in  (+24 more)
lib/anonymous/: Makefile.am  anonymous.c  anonymous.h  client.c  mechinfo.c  server.c
lib/cram-md5/: Makefile.am  challenge.c  challenge.h  client.c  cram-md5.c  cram-md5.h  digest.c  digest.h  init_client.c  init_server.c  mechinfo.c  server.c
lib/crypto/: .cvsignore  Makefile.am  README.gsasl  gc-libgcrypt.c  gc-nettle.c  gc.h
lib/digest-md5/: .cvsignore  Makefile.am  README  client.c  digest-md5.c  digest-md5.h  digesthmac.c  digesthmac.h  free.c  free.h  getsubopt.c  mechinfo.c  nonascii.c  nonascii.h  parser.c  parser.h  printer.c  printer.h  qop.c  qop.h  server.c  session.c  session.h  shared.c  shared.h  test-parser.c  tokens.h  validate.c  validate.h
lib/gl/: .cvsignore  Makefile.am  alloca_.h  asnprintf.c  asprintf.c  base64.c  base64.h  c-ctype.c  c-ctype.h  check-version.c  check_version.c  check_version.h  dummy.c  errno.in.h  float+.h  float.in.h  gc-gnulib.c  gc-libgcrypt.c  (+51 more)
m4/: ChangeLog  Makefile.am  check_headerlib.m4  libntlm.m4  valgrind.m4
src/: .cvsignore  Makefile.am  callbacks.c  callbacks.h  gsasl.c  gsasl.ggo  imap.c  imap.h  internal.h  libgsasl-config.in  libgsasl.m4  smtp.c  smtp.h
tests/: .cvsignore  Makefile.am  cram-md5.c  cram-md5.pwd  crypto.c  digest-md5.c  errors.c  external.c  gs2-krb5.c  gssapi.c  gssapi.key  gssapi.tkt  libgsasl.supp  md5file.c  name.c  old-base64.c  old-cram-md5.c  old-digest-md5.c  old-gssapi.c  old-md5file.c  old-simple.c  openid20.c  plain-client.sh  readnz.c  saml20.c  scram.c  scramplus.c  shishi.conf  simple.c  suggest.c  symbols.c  threadsafety  unicode.c  utils.c  utils.h
(+291 files in other folders)
